# Sparse-Voxel-Octree

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  svo_gpu.diff  svo_pre_axis_swap.diff
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: Application.cpp  Application.hpp  Main.cpp  Octree.cpp  Octree.hpp  Util.hpp  Window.cpp  Window.hpp
src/shaders/: frag.glsl  vert.glsl
